# min-rust-corr

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: bicor.rs  hellcor.rs  kendall.rs  lib.rs  pearson.rs  pvalues.rs  spearman.rs  upper.rs
crates/core/src/hellinger/: dbeta.rs  mod.rs  nmath.rs  pbeta.rs  qbeta.rs  toms708.rs
crates/core/tests/: GTEx_test.sh  investigate_diffs.R  pvalue_parity_check.R  qbeta_against_r.rs  qbeta_ref.R  synthetic.rs
crates/py/: Cargo.toml  pyproject.toml
crates/py/src/: lib.rs
docs/: qbeta.md
examples/: normalised_and_vst_counts_in_tissues.R  process_GTEX_tissues.sh
scripts/: bench_upper.py
src/: bicor.rs  hellcor.rs  kendall.rs  lib.rs  main.rs  pearson.rs  rank.rs  spearman.rs
src/hellinger/: mod.rs  pbeta.rs  qbeta.rs  toms708.rs
tests/: GTEX_test.sh  GTEx_test.sh  hellcor_compare.R  investigate_diffs.R  qbeta_against_r.rs
