[package]
name = "mincorr"
version = "0.1.0"
edition = "2024"
authors = ["Denis Demin"]
description = "High-performance correlation analysis for large data matrices"
repository = "https://github.com/deminden/min-rust-corr"
license = "MIT"
keywords = ["correlation", "statistics", "bioinformatics", "blas"]
categories = ["science", "algorithms"]

[build-dependencies]
cc = "1"

[dependencies]
csv = "1.4.0" 
ndarray = { version = "0.17.1", features = ["rayon"] }
rayon = "1.11.0"
tar = "0.4.44"
flate2 = "1.1.5"
kendalls = "1.0.0"
libc = "0.2.178"
strum = "0.27.2"
strum_macros = "0.27.2"

# [features]
# default = ["openblas"]
# openblas = ["ndarray-linalg/openblas-static"]
# intel-mkl = ["ndarray-linalg/intel-mkl-static"]