[package]
name = "mincorr-cli"
version = "0.2.1"
edition = "2024"
license = "GPL-2.0-or-later"

[[bin]]
name = "mincorr-cli"
path = "src/main.rs"

[dependencies]
csv = "1.4.0"
flate2 = "1.1.5"
mincorr = { path = "../core" }
ndarray = "0.17.1"
rayon = "1.11.0"
rand = "0.8.5"
strum = "0.27.2"
strum_macros = "0.27.2"
tar = "0.4.44"
